<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">UCLove2</string>
    <string name="settings">Settings</string>
    <string name="psw_new">New password</string>
    <string name="psw_old">Old password</string>
    <string name="psw_change">Change password:</string>
    <string name="psw_wrong">Wrong Password!</string>
    <string name="psw_right">Password Changed!</string>
    <string name="psw_enter">Enter</string>
    <string name="change_lang">Language:</string>
    <string name="btn_en">English</string>
    <string name="btn_fr">French</string>


</resources>