<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lsinf1225.beznik.thomas.uclove2.Settings">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_lang"
        android:layout_marginTop="70dp" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn_fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fr"
        android:layout_marginRight="65dp"
        android:layout_marginEnd="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:id="@+id/btn_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_en"
        android:layout_marginRight="56dp"
        android:layout_marginEnd="56dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btn_fr"
        android:layout_toStartOf="@+id/btn_fr" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/psw_change"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/psw_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/psw_old"
        android:inputType="textPassword"
        />


    <EditText
        android:id="@+id/psw_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/psw_new"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/psw_enter"
        android:id="@+id/psw_enter"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
